2019/07/30
	1. Remove the __Final__ attribute from the Scorpio class, so it can be inherited.

2019/07/29
	1. __Service__ is added used to mark the target method as an async service so it'd be automatically processed when the addon is loaded, and the system will try to re-process it if the process is dead as required.
	2. Scorpio.UI.Style system added.

2019/04/20
	1. Basic UI system finished.
	2. Basic UI style system finished.
	3. Fix a check in the task system, function with one argument may be treated as non-argument.
	4. Hook system is removed, since it's useless, we only need use secure hook system.

2018/07/27
	1. Add the missing code for cache recycle

2018/07/25
	1. Fix the OnSpecChanged event don't fire when player's spec is changed by the battlefield.

2018/07/21
	1. You can use Color.FromHSV(h, s, v) to generate color from HSV, or use color:ToHSV() to generate the hsv value.
	2. You can use Color.FromHSL(h, s, l) to generate color from HSL, or use color:ToHSL() to generate the hsl value.

2018/05/13
	1. Fix the Localization not works well.

2018/04/16
	1. Update for PLoop v210

2018/03/26
	1. Update for PLoop v201
	2. Rename the Scorpio.Event -> Scorpio.NextEvent to avoid the conflict with System.Event

2018/02/11
	__NoCombat__ can be used on class methods now.

2017/12/14
	New static method added to support wait for next object-method call, works like "Event", "Wait" API:
		* NextCall([func, ][target, ]targetFunc[, ...])  		-- Wait next un-secure call
		* NextSecureCall([func, ][target, ]targetFunc[, ...]) 	-- Wait next secure call

	New method added to get handlers for hook :
		* GetHookHandler(self, [target,] targetFunc)
		* GetSecureHookHandler(self, [target,] targetFunc)

2017/09/25
	New GetRegisteredEventHandler API for Scorpio module.

2017/08/29
	Fix the char saved varables can't be generated if the toc don't hav

2017/03/05
	Fix __AddonSecureHook__ not works as demand. NEString is removed to PLoop.
