@@ -1,7 +1,7 @@
 ## Interface: 80200
 ## Title: [Lib] Scorpio
 ## Author: kurapica125@outlook.com
-## Version: v029
+## Version: v030
 ## Notes: Scorpio Addon FrameWork
 ## URL: http://github.com/kurapica/Scorpio
 ## Dependencies: PLoop
