@@ -1,3 +1,6 @@
+2019/07/31
+	1. Style Class system is fixed to support changes.
+
 2019/07/30
 	1. Remove the __Final__ attribute from the Scorpio class, so it can be inherited.
 
